--- a/app/compiled/mystyle.css
+++ b/app/compiled/mystyle.css
@@ -452,7 +452,6 @@ body {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  padding: 3em;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
@@ -1076,9 +1075,6 @@ section.Copyleft {
   }
 }
 .FormularioLanding {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   min-height: 80vh;
   background-color: transparent;
   background-repeat: no-repeat;
@@ -1195,6 +1191,10 @@ section.Copyleft {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
   color: #000;
 }
 .FooterLanding .Contactos__Sociales a {
@@ -1311,6 +1311,10 @@ section.SolicitarDemo {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
@@ -1346,10 +1350,27 @@ section.SolicitarDemo {
   }
 }
 @media (max-width: 640px) {
-  .ImagenyContenidoDestacado.container {
+  section.SolicitarDemo {
+    text-align: center;
+  }
+  .ImagenyContenidoDestacado.container,
+  section.SolicitarDemo {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
+  }
+  .FormularioLanding__Descripcion__Producto {
+    font-size: 2em;
+  }
+  .FooterLanding {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+  footer .container {
+    margin: 0;
+    padding: 0;
   }
 }
