--- a/stylus/components/calidad.styl
+++ b/stylus/components/calidad.styl
@@ -12,7 +12,7 @@
 	max-width 450px
 .Calidad__Titulo
 	display: flex;
-	font-weight: lighter;
+	font-weight: normal;
 	display: table;
 	font-size: 2em;
 	font-weight: 600
