--- a/stylus/components/direccion.styl
+++ b/stylus/components/direccion.styl
@@ -6,7 +6,7 @@ section.Direccion.container {
 }
 .Direccion__texto {
     flex: 1;
-    font-weight: 300;
+    font-weight: normal;
 }
 .Direccion__mapa {
 	flex: 1;
