--- a/stylus/components/footer.styl
+++ b/stylus/components/footer.styl
@@ -40,7 +40,7 @@ section.Copyleft{
 .Menus__links>ul,.Contactos__Direccion,.Subscripcion__descripcion
 	list-style: none;
 	padding: 0;
-	font-weight: 100;
+	font-weight: normal;
 	p
 		a
 			color #FFF
