--- a/stylus/components/productos.styl
+++ b/stylus/components/productos.styl
@@ -26,7 +26,7 @@ a.cotizar {
 
 .Producto__Texto__Descripcion {
     font-style: italic;
-    font-weight: 300;
+    font-weight: normal;
 }
 
 .Producto__Texto__Caracteristica {
