--- a/stylus/components/productosyServicios.styl
+++ b/stylus/components/productosyServicios.styl
@@ -3,7 +3,7 @@
 	color: #5b553e;
 .ProductosyServicios__Titulo
 	display: flex;
-	font-weight: lighter;
+	font-weight: normal;
 	display: table;
 	font-size: 2em;
 	font-weight: 600
@@ -28,7 +28,7 @@
 .ProductosyServicios__Subtitulo
 	text-align: center;
 	width: 80%;
-	font-weight: 200;
+	font-weight: normal;
 	font-style: italic;
 .ProductosyServicios__Atributos
 	width: 100%;
@@ -64,5 +64,5 @@
 
 .ProductosyServicios__Atributo__Resumen {
     width: 80%;
-    font-weight 400
+    font-weight normal
 }
