--- a/app/compiled/mystyle.css
+++ b/app/compiled/mystyle.css
@@ -121,7 +121,6 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-weight: lighter;
   display: table;
   font-size: 2em;
   font-weight: 600;
@@ -149,7 +148,7 @@ body {
 .Progress__Subtitulo {
   text-align: center;
   width: 80%;
-  font-weight: 200;
+  font-weight: normal;
   font-style: italic;
 }
 .Progress__Atributos {
@@ -232,7 +231,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-weight: lighter;
+  font-weight: normal;
   display: table;
   font-size: 1.5em;
   font-weight: 600;
@@ -327,7 +326,7 @@ body {
 }
 .EquipoDeTrabajo__Contenido {
   width: 85%;
-  font-weight: 200;
+  font-weight: normal;
   font-style: italic;
 }
 .EquipoDeTrabajo__Contenido img.Equipo__Trabajo__img {
@@ -354,7 +353,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-weight: lighter;
+  font-weight: normal;
   display: table;
   font-size: 2em;
   font-weight: 600;
@@ -382,7 +381,7 @@ body {
 .ProductosyServicios__Subtitulo {
   text-align: center;
   width: 80%;
-  font-weight: 200;
+  font-weight: normal;
   font-style: italic;
 }
 .ProductosyServicios__Atributos {
@@ -442,7 +441,7 @@ body {
 }
 .ProductosyServicios__Atributo__Resumen {
   width: 80%;
-  font-weight: 400;
+  font-weight: normal;
 }
 .Calidad {
   display: -webkit-box;
@@ -480,7 +479,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-weight: lighter;
+  font-weight: normal;
   display: table;
   font-size: 2em;
   font-weight: 600;
@@ -720,7 +719,7 @@ a.cotizar {
 }
 .Producto__Texto__Descripcion {
   font-style: italic;
-  font-weight: 300;
+  font-weight: normal;
 }
 .Producto__Texto__Caracteristica {
   width: 50%;
@@ -820,7 +819,7 @@ section.Direccion.container {
   -webkit-box-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  font-weight: 300;
+  font-weight: normal;
 }
 .Direccion__mapa {
   -webkit-box-flex: 1;
@@ -983,7 +982,7 @@ section.Copyleft {
 .Subscripcion__descripcion {
   list-style: none;
   padding: 0;
-  font-weight: 100;
+  font-weight: normal;
 }
 .Menus__links>ul p a,
 .Contactos__Direccion p a,
@@ -1094,9 +1093,6 @@ section.Copyleft {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
 }
 .FormilarioLanding__Formulario {
   -webkit-box-flex: 2;
@@ -1195,7 +1191,6 @@ section.Copyleft {
   -webkit-box-direction: normal;
   -ms-flex-direction: row;
   flex-direction: row;
-  color: #000;
 }
 .FooterLanding .Contactos__Sociales a {
   color: #0c5380;
