--- a/stylus/components/equipoDeTrabajo.styl
+++ b/stylus/components/equipoDeTrabajo.styl
@@ -16,7 +16,7 @@
 	overflow hidden
 .EquipoDeTrabajo__Titulo
 	display: flex;
-	font-weight: lighter;
+	font-weight: normal;
 	display: table;
 	font-size: 1.5em;
 	font-weight: 600
@@ -81,7 +81,7 @@
 
 .EquipoDeTrabajo__Contenido
 	width: 85%;
-	font-weight: 200;
+	font-weight: normal;
 	font-style: italic;
 	img.Equipo__Trabajo__img
 		height: 100%;
