--- a/stylus/components/seccionProgress.styl
+++ b/stylus/components/seccionProgress.styl
@@ -3,7 +3,6 @@
 	color: #5b553e;
 .Progress__Titulo
 	display: flex;
-	font-weight: lighter;
 	display: table;
 	font-size: 2em;
 	font-weight: 600
@@ -28,7 +27,7 @@
 .Progress__Subtitulo
 	text-align: center;
 	width: 80%;
-	font-weight: 200;
+	font-weight: normal;
 	font-style: italic;
 .Progress__Atributos
 	width: 100%;
