--- a/app/compiled/mystyle.css
+++ b/app/compiled/mystyle.css
@@ -1355,6 +1355,10 @@ section.SolicitarDemo {
     -ms-flex-direction: column;
     flex-direction: column;
   }
+  .FormularioLanding__Descripcion,
+  .FormilarioLanding__Formulario {
+    margin: 1em 0;
+  }
   .FormularioLanding__Descripcion__Producto {
     font-size: 2em;
   }
