--- a/stylus/components/Landing.styl
+++ b/stylus/components/Landing.styl
@@ -211,6 +211,9 @@ section.SolicitarDemo {
 	.ImagenyContenidoDestacado.container,section.SolicitarDemo{
 		flex-direction column;
 	}
+    .FormularioLanding__Descripcion,.FormilarioLanding__Formulario{
+        margin 1em 0
+    }
 
 	.FormularioLanding__Descripcion__Producto{
 		font-size 2em
