--- a/stylus/components/Landing.styl
+++ b/stylus/components/Landing.styl
@@ -203,6 +203,13 @@ section.SolicitarDemo {
 	.FlexFormSection{
 	flex-direction:column;
 	}
+    .CaracteristicasLanding__Caracteristica{
+        flex-basis: calc(50% - 4em)
+        }
+        .ClientesLanding__Cliente {
+            flex-basis: 33%
+        }
+
 }
 @media(max-width:640px){
 	section.SolicitarDemo{
@@ -221,6 +228,12 @@ section.SolicitarDemo {
 	.FooterLanding{
 	flex-direction column
 	}
+    .CaracteristicasLanding__Caracteristica{
+        flex-basis: calc(100% - 4em)
+        }
+        .ClientesLanding__Cliente {
+            flex-basis: 50%
+        }
 	footer{
 		.container{
 			margin 0
