--- a/stylus/components/Landing.styl
+++ b/stylus/components/Landing.styl
@@ -40,7 +40,7 @@
     content:'';
     position:absolute;
     width: 70%;
-    border-bottom: solid red 2px;
+    border-bottom: solid #008000 2px;
     bottom:0;
 }
 .FormilarioLanding__Formulario__Titulo {
@@ -52,8 +52,8 @@
 }
 
 .FormilarioLanding__Formulario__Fields
-	padding: 2em 1em;
-	color #FFF;
+	padding: 2em 1em 0em 1em
+	color #000;
 	text-align center
 	.formField
 		margin-bottom 1em;
@@ -61,30 +61,23 @@
 			color #000
 .LandingFormmensaje {
     padding: 2em 0;
+    color #fff
 }
 .botonCotizacion {
-	box-shadow: 0px 0px 0px 2px #9fb4f2;
-	background:linear-gradient(to bottom, #7892c2 5%, #0c5480 100%);
-	background-color:#7892c2;
+	background-color:#008000
 	border-radius:10px;
-	border:1px solid #0c5480;
+	border:1px solid #008000;
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
-	font-family:Arial;
 	font-size:19px;
 	padding:12px 37px;
 	text-decoration:none;
-	text-shadow:0px 1px 0px #0c5480;
+	text-shadow:0px 1px 0px #008000;
 }
 .botonCotizacion:hover {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #0c5480), color-stop(1, #7892c2));
-	background:-moz-linear-gradient(top, #0c5480 5%, #7892c2 100%);
-	background:-webkit-linear-gradient(top, #0c5480 5%, #7892c2 100%);
-	background:-o-linear-gradient(top, #0c5480 5%, #7892c2 100%);
-	background:-ms-linear-gradient(top, #0c5480 5%, #7892c2 100%);
-	background:linear-gradient(to bottom, #0c5480 5%, #7892c2 100%);
-	background-color:#0c5480;
+	background-color:lighten(#008000,20);
+    color #FFF
 }
 .botonCotizacion:active {
 	position:relative;
