--- a/app/compiled/mystyle.css
+++ b/app/compiled/mystyle.css
@@ -1383,4 +1383,10 @@ section.SolicitarDemo {
     margin: 0;
     padding: 0;
   }
+  .TituloDestacado {
+    padding: 2em;
+  }
+  .TituloDestacado__Titulo {
+    font-size: 2rem;
+  }
 }
