--- a/stylus/components/Landing.styl
+++ b/stylus/components/Landing.styl
@@ -233,6 +233,12 @@ section.SolicitarDemo {
 			padding 0
 			}
 		}
+  .TituloDestacado{
+    padding 2em
+  }
+  .TituloDestacado__Titulo{
+    font-size 2rem;
+  }
 
 }
 
